syntax = "proto3";

package workspace.v1;
option go_package = "github.com/hgyowan/church-financial-account-grpc/gen/workspace/v1";

import "google/protobuf/descriptor.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "workspace/model/v1/model.proto";
import "google/protobuf/timestamp.proto";
import "google/api/httpbody.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "CFM API Swagger"
    version: "1.0"
    contact: {
      name: "gRPC-Gateway project"
      url: "https://github.com/hgyowan/church-financial-grpc-gateway"
    }
  }
  host: "cfm-api-dev.holyflows.com"
  schemes: HTTPS
  schemes: HTTP
  responses: {
    key: "success"
    value: {
      description: "Success Response"
      schema: {
        json_schema: {example: "{\"code\": 1, \"data\": \"200 에 해당하는 응답\"}"}
      }
    }
  }
  security_definitions: {
    security: {
      key: "X-User-Token"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "x-user-token"
      }
    }
  }
  security: {
    security_requirement: {
      key: "X-User-Token";
    };
  };
};

service WorkspaceService {
  rpc ListWorkspaceIntro(ListWorkspaceIntroRequest) returns (ListWorkspaceIntroResponse) {
    option (google.api.http) = {
      get: "/v1/workspace/intro/list"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "워크스페이스 소개 리스트 조회"
      description: "워크스페이스 소개 리스트 조회"
      responses: {
        key: "400"
        value: {
          description: "(40001) wrong variable type"
          schema: {
            json_schema: {example: "{\"code\": \"에러코드\", \"data\": null}"}
          }
        }
      }
      responses: {
        key: "500"
        value: {
          description: "(10004) fail to get data"
          schema: {
            json_schema: {example: "{\"code\": \"에러코드\", \"data\": null}"}
          }
        }
      }
    };
  }

  rpc SendWorkspaceInviteMessage(SendWorkspaceInviteMessageRequest) returns (SendWorkspaceInviteMessageResponse) {
    option (google.api.http) = {
      post: "/v1/workspace/invite/send"
      body: "*"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "워크스페이스 초대 메일 발송"
      description: "워크스페이스 초대 메일 발송"
      responses: {
        key: "400"
        value: {
          description: "(40001) wrong variable type"
          schema: {
            json_schema: {example: "{\"code\": \"에러코드\", \"data\": null}"}
          }
        }
      }
      responses: {
        key: "404"
        value: {
          description: "(40004) not found data"
          schema: {
            json_schema: {example: "{\"code\": \"에러코드\", \"data\": null}"}
          }
        }
      }
      responses: {
        key: "500"
        value: {
          description: "(10001) fail to create data <br> (10004) fail to get data"
          schema: {
            json_schema: {example: "{\"code\": \"에러코드\", \"data\": null}"}
          }
        }
      }
    };
  }
}

message ListWorkspaceIntroRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      description: "워크스페이스 소개 리스트 조회 요청"
      required: ["pageNo", "pageSize"]
    }
  };

  string sort = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "정렬 기준 (name, memberCount)"}];
  string sortDirection = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "정렬 (asc, desc)"}];
  int32 pageNo = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "페이지"}];
  int32 pageSize = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "페이지 크기"}];
}
message ListWorkspaceIntroResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      description: "워크스페이스 소개 리스트 조회 응답"
      required: ["list", "hasNext"]
    }
  };

  repeated model.v1.WorkspaceIntro list = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "워크스페이스 소개 목록"}];
  bool hasNext = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "다음 페이지 여부"}];
}

message SendWorkspaceInviteMessageRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      description: "워크스페이스 초대 메일 발송 응답"
      required: ["workspaceId", "message"]
    }
  };

  string workspaceId = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "워크스페이스 아이디"}];
  string message = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "소개 메시지"}];
}
message SendWorkspaceInviteMessageResponse {}